# CPPM5_Homework11_3

./: CMakeLists.txt  README.md
LeaverApp/: LeaverApp.cpp  LeaverApp.vcxproj  LeaverApp.vcxproj.filters
LeaverLib/: Leaver.cpp  Leaver.h  LeaverLib.vcxproj  LeaverLib.vcxproj.filters
